--- a/index.html
+++ b/index.html
@@ -6,39 +6,18 @@
       body {margin:auto; padding:0;background-color:#000000;width:500px;}
     </style>
     <script type="text/javascript" charset="utf-8" src="cordova-2.5.0.js"></script>
-
-  <script src="pixi.js"></script>
-  </head>
-  
+    <script src="pixi.js"></script>
+    <script src="geolocation.js"></script>
+    <script src="index.js"></script>
     <script type="text/javascript" charset="utf-8">
       document.addEventListener("deviceready", onDeviceReady, false);
-      function onDeviceReady() {navigator.geolocation.getCurrentPosition(onSuccess, onError);}
-      function onSuccess(position) {
-        var element = document.getElementById('geolocation');
-        element.innerHTML = 'Latitude: '           + position.coords.latitude              + '<br />' +
-                            'Longitude: '          + position.coords.longitude             + '<br />' +
-                            'Altitude: '           + position.coords.altitude              + '<br />' +
-                            'Accuracy: '           + position.coords.accuracy              + '<br />' +
-                            'Altitude Accuracy: '  + position.coords.altitudeAccuracy      + '<br />' +
-                            'Heading: '            + position.coords.heading               + '<br />' +
-                            'Speed: '              + position.coords.speed                 + '<br />' +
-                            'Timestamp: '          + 
- position.timestamp                    + '<br />';
-    }
-
-    function onError(error) {alert('code:'+error.code+'\n'+'message:'+error.message+'\n');}
-    function animate() {requestAnimFrame(animate); renderer.render(stage);}
-        
+      function onDeviceReady() {index_init();}
     </script>
+  </head>
+  
     
   <body>
-    <script>
-      var stage = new PIXI.Stage(0xDEF7F7, true);
-      var renderer PIXI.autoDetectRenderer(500, 700);
-      document.body.appendChild(renderer.view);
-      requestAnimFrame(animate);
-    </script>    
-    <p id="geolocation">Finding geolocation...</p>
+    <script>index_body();</script>    
   </body>
   
 </html>
